--- a/package.json
+++ b/package.json
@@ -14,31 +14,30 @@
     "bufferutil": "^3.0.3",
     "clusterize.js": "^0.18.0",
     "codemirror": "^5.35.0",
-    "css-loader": "^0.28.9",
     "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^3.0.2",
     "flatpickr": "^4.3.2",
     "jquery": "^3.3.1",
     "moment": "^2.20.1",
     "node-fetch": "^1.7.3",
     "nunjucks": "^3.1.0",
     "popper.js": "^1.12.9",
-    "postcss-loader": "^2.1.0",
-    "sass-loader": "^6.0.6",
     "showdown": "^1.8.6",
     "socket.io": "^2.0.4",
     "sortablejs": "^1.7.0",
     "sqlite3": "^3.1.13",
-    "style-loader": "^0.20.2",
     "utf-8-validate": "^4.0.0",
-    "walk": "^2.3.9",
-    "webpack": "^3.11.0"
+    "walk": "^2.3.9"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.4",
     "eslint": "^4.9.0",
     "mocha": "^4.0.1",
     "node-sass": "^4.7.2",
-    "nodemon": "^1.15.1"
+    "nodemon": "^1.15.1",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.20.2",
+    "css-loader": "^0.28.9",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "webpack": "^3.11.0"
   }
 }
