--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "feather-icons": "^4.7.3",
     "frappe-datatable": "^0.0.9",
     "frappejs": "^0.0.7",
+    "jspdf": "^1.4.1",
     "vue": "^2.5.2",
     "vue-flatpickr-component": "^7.0.2",
     "vue-router": "^3.0.1"
