--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "frappejs": "^0.0.7",
     "imap": "^0.8.19",
     "mailparser": "^2.2.0",
-    "nodemailer": "^4.6.6"
+    "nodemailer": "^4.6.6",
+    "simplesmtp": "^0.3.35"
   },
   "devDependencies": {
     "electron": "1.8.4",
