[pdf] init electron flow

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.2",
     "flatpickr": "^4.3.2",
     "frappe-datatable": "^1.1.2",
+    "fs": "^0.0.1-security",
     "jquery": "^3.3.1",
     "jwt-simple": "^0.5.1",
     "luxon": "^1.0.0",
