Update bootstrap and add feather-icons

--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "awesomplete": "^1.1.2",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
-    "bootstrap": "^4.0.0",
+    "bootstrap": "^4.1.2",
     "codemirror": "^5.35.0",
     "commander": "^2.13.0",
     "cors": "^2.8.4",
     "deepmerge": "^2.1.0",
     "express": "^4.16.2",
+    "feather-icons": "^4.7.3",
     "flatpickr": "^4.3.2",
     "frappe-datatable": "^1.1.2",
     "jquery": "^3.3.1",
