Remove duplicate dependencies

--- a/package.json
+++ b/package.json
@@ -23,12 +23,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "bootstrap": "^4.1.1",
-    "feather-icons": "^4.7.3",
-    "frappejs": "^0.0.8",
-    "vue": "^2.5.2",
-    "vue-flatpickr-component": "^7.0.2",
-    "vue-router": "^3.0.1"
+    "frappejs": "^0.0.8"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
