Frappe CLI for development
- frappe start command
  - starts frappejs server
  - sets up webpack middleware to bundle files
- introduce frappe.conf.js for configuration

--- a/package.json
+++ b/package.json
@@ -3,24 +3,35 @@
   "version": "0.0.8",
   "description": "Frappe.js",
   "main": "index.js",
-  "bin": "cli.js",
+  "bin": {
+    "frappe": "cli.js"
+  },
   "scripts": {
     "test": "mocha tests",
     "start": "nodemon app.js"
   },
   "dependencies": {
     "awesomplete": "^1.1.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.1.2",
+    "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "codemirror": "^5.35.0",
     "commander": "^2.13.0",
     "cors": "^2.8.4",
+    "css-loader": "^1.0.0",
     "deepmerge": "^2.1.0",
+    "electron": "2.0.5",
+    "electron-debug": "^2.0.0",
+    "electron-devtools-installer": "^2.2.4",
     "express": "^4.16.2",
     "feather-icons": "^4.7.3",
     "flatpickr": "^4.3.2",
     "frappe-datatable": "^1.1.2",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
     "jwt-simple": "^0.5.1",
     "luxon": "^1.0.0",
@@ -34,12 +45,18 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "puppeteer": "^1.2.0",
+    "sass-loader": "^7.0.3",
     "showdown": "^1.8.6",
     "socket.io": "^2.0.4",
     "sqlite3": "^3.1.13",
     "vue": "^2.5.16",
     "vue-flatpickr-component": "^7.0.4",
-    "vue-router": "^3.0.1"
+    "vue-loader": "^15.2.6",
+    "vue-router": "^3.0.1",
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^4.16.1",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-hot-middleware": "^2.22.3"
   },
   "repository": {
     "type": "git",
