--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "luxon": "^1.0.0",
     "mkdirp": "^0.5.1",
     "morgan": "^1.9.0",
+    "multer": "^1.3.1",
     "mysql": "^2.15.0",
     "node-fetch": "^1.7.3",
     "node-sass": "^4.7.2",
