--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "electron-devtools-installer": "^2.2.4",
     "express": "^4.16.2",
     "feather-icons": "^4.7.3",
+    "file-loader": "^1.1.11",
     "flatpickr": "^4.3.2",
     "frappe-datatable": "^1.3.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
+    "imagemagick": "^0.1.3",
     "jquery": "^3.3.1",
     "jwt-simple": "^0.5.1",
     "luxon": "^1.0.0",
@@ -46,6 +48,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "puppeteer": "^1.2.0",
+    "quickthumb": "^0.0.12",
     "sass-loader": "^7.0.3",
     "showdown": "^1.8.6",
     "socket.io": "^2.0.4",
