--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "frappe-datatable": "^1.3.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
-    "imagemagick": "^0.1.3",
     "jquery": "^3.3.1",
     "jwt-simple": "^0.5.1",
     "luxon": "^1.0.0",
@@ -48,8 +47,8 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "puppeteer": "^1.2.0",
-    "quickthumb": "^0.0.12",
     "sass-loader": "^7.0.3",
+    "sharp": "^0.20.8",
     "showdown": "^1.8.6",
     "socket.io": "^2.0.4",
     "sqlite3": "^3.1.13",
