--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "cors": "^2.8.4",
     "css-loader": "^1.0.0",
     "deepmerge": "^2.1.0",
-    "electron": "2.0.5",
+    "electron": "^3.0.2",
     "electron-debug": "^2.0.0",
     "electron-devtools-installer": "^2.2.4",
     "express": "^4.16.2",
