Lock electron version to 2.0.12 and upgrade sqlite3

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "cors": "^2.8.4",
     "css-loader": "^1.0.0",
     "deepmerge": "^2.1.0",
-    "electron": "^3.0.2",
+    "electron": "2.0.12",
     "electron-builder": "^20.28.4",
     "electron-debug": "^2.0.0",
     "electron-devtools-installer": "^2.2.4",
@@ -52,7 +52,7 @@
     "sharp": "^0.20.8",
     "showdown": "^1.8.6",
     "socket.io": "^2.0.4",
-    "sqlite3": "^3.1.13",
+    "sqlite3": "^4.0.2",
     "vue": "^2.5.16",
     "vue-flatpickr-component": "^7.0.4",
     "vue-loader": "^15.2.6",
