--- a/package.json
+++ b/package.json
@@ -8,7 +8,41 @@
     "email": "hello@frappe.io"
   },
   "build": {
-    "appId": "io.frappe.accounting"
+    "asarUnpack": [
+      "node_modules/sqlite3"
+    ],
+    "productName": "Frappe Accounting",
+    "appId": "io.frappe.accounting",
+    "directories": {
+      "output": "build"
+    },
+    "files": [
+      "dist/electron/**/*"
+    ],
+    "dmg": {
+      "contents": [
+        {
+          "x": 410,
+          "y": 150,
+          "type": "link",
+          "path": "/Applications"
+        },
+        {
+          "x": 130,
+          "y": 150,
+          "type": "file"
+        }
+      ]
+    },
+    "mac": {
+      "icon": "build/icons/icon.icns"
+    },
+    "win": {
+      "icon": "build/icons/icon.ico"
+    },
+    "linux": {
+      "icon": "build/icons"
+    }
   },
   "main": "dist/electron/main.js",
   "license": "MIT",
@@ -16,9 +50,12 @@
     "test": "mocha tests",
     "start": "frappe start",
     "electron": "ELECTRON=true frappe start electron",
-    "build-electron": "NODE_ENV=production ELECTRON=true frappe build electron && electron-builder"
+    "pack-electron": "NODE_ENV=production ELECTRON=true frappe build electron",
+    "build-electron": "npm run pack-electron && electron-builder",
+    "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
-    "frappejs": "^0.0.10"
+    "frappejs": "github:frappe/frappejs",
+    "popper.js": "^1.14.4"
   }
 }
