--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "frappejs": "github:frappe/frappejs",
-    "popper.js": "^1.14.4"
+    "popper.js": "^1.14.4",
+    "vue-toasted": "^1.1.25"
   }
 }
