--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
       "dist/electron/**/*"
     ],
     "dmg": {
-      "contents": [
-        {
+      "contents": [{
           "x": 410,
           "y": 150,
           "type": "link",
@@ -55,7 +54,6 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
-    "electron": "^3.0.12",
     "file-saver": "^2.0.0",
     "frappejs": "github:frappe/frappejs",
     "nodemailer": "^4.7.0",
