--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 node_modules
 .DS_Store
-*.db
 Thumbs.db
+*test.db
 *.log
 .cache
 /temp
@@ -11,3 +11,4 @@ Frappe Accounting*
 build
 !build/icons
 !.gitkeep
+*.db
