--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
       "dist/electron"
     ],
     "dmg": {
-      "contents": [
-        {
+      "contents": [{
           "x": 410,
           "y": 150,
           "type": "link",
@@ -52,7 +51,7 @@
   "scripts": {
     "test": "mocha tests",
     "start": "frappe start",
-    "electron": "cross-env ELECTRON=true frappe start electron",
+    "electron": "ELECTRON=true frappe start electron",
     "pack-electron": "cross-env NODE_ENV=production ELECTRON=true frappe build electron",
     "build-electron": "npm run pack-electron && electron-builder",
     "postinstall": "electron-builder install-app-deps"
@@ -60,7 +59,9 @@
   "dependencies": {
     "cross-env": "^5.2.0",
     "frappejs": "github:frappe/frappejs",
+    "nodemailer": "^4.7.0",
     "popper.js": "^1.14.4",
+    "vue-color": "^2.7.0",
     "vue-toasted": "^1.1.25"
   }
 }
