-Use puppeteer core for smaller app size

--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
     "octicons": "^7.2.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "puppeteer": "^1.2.0",
+    "puppeteer-core": "^1.19.0",
     "sass-loader": "^7.0.3",
-    "sharp": "^0.22.1",
+    "sharp": "^0.23.0",
     "showdown": "^1.8.6",
     "socket.io": "^2.0.4",
     "sqlite3": "^4.0.9",
