--- a/package.json
+++ b/package.json
@@ -59,9 +59,11 @@
   },
   "dependencies": {
     "cross-env": "^5.2.0",
+    "csvjson-csv2json": "^5.0.6",
     "file-saver": "^2.0.2",
     "frappe-charts": "^1.2.4",
     "frappejs": "https://github.com/thefalconx33/frappejs#test",
+    "inter-ui": "^3.10.0",
     "nodemailer": "^4.7.0",
     "popper.js": "^1.14.4",
     "vue-color": "^2.7.0",
