--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "nodemailer": "^4.7.0",
     "popper.js": "^1.14.4",
     "vue-color": "^2.7.0",
-    "vue-toasted": "^1.1.25"
+    "vue-toasted": "^1.1.25",
+    "csvjson-csv2json": "latest"
   }
 }
