fix: convert child rows to BaseDocument objects
- tests
- test watch command

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "NODE_ENV=test mocha --timeout 3000 tests",
+    "test-watch": "NODE_ENV=test mocha --timeout 3000 tests --watch --reporter=min",
     "start": "nodemon app.js"
   },
   "dependencies": {
