--- a/package.json
+++ b/package.json
@@ -12,52 +12,40 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
-    "awesomplete": "^1.1.2",
+    "autoprefixer": "9.6.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
-    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.2",
-    "bootstrap": "^4.3.1",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
-    "codemirror": "^5.35.0",
     "commander": "^2.13.0",
     "copy-webpack-plugin": "^4.5.4",
     "cors": "^2.8.4",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
+    "csvjson-csv2json": "5.0.6",
     "deepmerge": "^2.1.0",
     "electron": "5.0.0",
     "electron-builder": "^21.0.15",
     "electron-debug": "^2.0.0",
     "electron-devtools-installer": "^2.2.4",
     "express": "^4.16.2",
-    "file-saver": "^2.0.2",
     "feather-icons": "^4.7.3",
     "file-loader": "^1.1.11",
-    "flatpickr": "^4.6.2",
-    "frappe-datatable": "^1.13.5",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
-    "jquery": "^3.3.1",
-    "jwt-simple": "^0.5.1",
     "luxon": "^1.0.0",
-    "popper.js": "^1.14.3",
     "mkdirp": "^0.5.1",
     "morgan": "^1.9.0",
     "multer": "^1.3.1",
-    "mysql": "^2.15.0",
     "node-fetch": "^1.7.3",
-    "node-sass": "^4.12.0",
     "nunjucks": "^3.1.0",
-    "octicons": "^7.2.0",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0",
-    "puppeteer-core": "^1.19.0",
+    "popper.js": "^1.14.3",
+    "postcss-loader": "3.0.0",
     "sass-loader": "^7.0.3",
-    "sharp": "^0.23.0",
     "showdown": "^1.8.6",
     "socket.io": "^2.0.4",
     "sqlite3": "^4.0.9",
+    "tailwindcss": "1.1.1",
     "vue": "^2.6.10",
     "vue-flatpickr-component": "^8.1.2",
     "vue-loader": "^15.2.6",
@@ -65,11 +53,7 @@
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.16.1",
     "webpack-dev-server": "^3.1.4",
-    "webpack-hot-middleware": "^2.22.3",
-    "csvjson-csv2json": "5.0.6",
-    "postcss-loader": "3.0.0",
-    "tailwindcss": "1.1.1",
-    "autoprefixer": "9.6.1"
+    "webpack-hot-middleware": "^2.22.3"
   },
   "repository": {
     "type": "git",
