--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
+    "knex": "^0.20.3",
     "luxon": "^1.0.0",
     "mkdirp": "^0.5.1",
     "morgan": "^1.9.0",
@@ -44,7 +45,7 @@
     "sass-loader": "^7.0.3",
     "showdown": "^1.8.6",
     "socket.io": "^2.0.4",
-    "sqlite3": "^4.0.9",
+    "sqlite3": "^4.1.1",
     "tailwindcss": "1.1.1",
     "vue": "^2.6.10",
     "vue-flatpickr-component": "^8.1.2",
