--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,24 @@
-node_modules
 .DS_Store
-*.db
-Thumbs.db
-*.log
-.cache
-/temp
-dist
-www/dist
-Frappe Accounting*
-build
-!build/icons
-!.gitkeep
-*.db
+node_modules
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+#Electron-builder output
+/dist_electron
