--- a/package.json
+++ b/package.json
@@ -7,68 +7,53 @@
     "name": "Frappe Technologies Pvt. Ltd.",
     "email": "hello@frappe.io"
   },
-  "build": {
-    "asarUnpack": [
-      "node_modules/sharp"
-    ],
-    "productName": "Frappe Accounting",
-    "appId": "io.frappe.accounting",
-    "directories": {
-      "output": "build"
-    },
-    "files": [
-      "dist/electron"
-    ],
-    "dmg": {
-      "contents": [
-        {
-          "x": 410,
-          "y": 150,
-          "type": "link",
-          "path": "/Applications"
-        },
-        {
-          "x": 130,
-          "y": 150,
-          "type": "file"
-        }
-      ]
-    },
-    "mac": {
-      "target": "dmg",
-      "icon": "build/icons/icon.icns"
-    },
-    "win": {
-      "target": "nsis",
-      "icon": "build/icons/icon.ico"
-    },
-    "linux": {
-      "target": "AppImage",
-      "icon": "build/icons"
-    }
-  },
-  "main": "dist/electron/main.js",
-  "license": "MIT",
   "scripts": {
-    "test": "mocha tests",
-    "start": "frappe start",
-    "electron": "ELECTRON=true frappe start electron",
-    "pack-electron": "cross-env NODE_ENV=production ELECTRON=true frappe build electron",
-    "build-electron": "npm run pack-electron && electron-builder",
-    "postinstall": "electron-builder install-app-deps"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps"
   },
+  "main": "background.js",
   "dependencies": {
-    "cross-env": "^5.2.0",
-    "file-saver": "^2.0.2",
-    "frappe-charts": "^1.2.4",
-    "frappejs": "https://github.com/frappe/frappejs",
-    "nodemailer": "^4.7.0",
-    "vue-color": "^2.7.0",
-    "vue-toasted": "^1.1.25",
-    "portal-vue": "2.1.6",
-    "popper.js": "1.16.0"
+    "core-js": "^3.4.3",
+    "deepmerge": "^4.2.2",
+    "frappe-charts": "^1.3.0",
+    "frappejs": "http://github.com/frappe/frappejs",
+    "knex": "^0.20.4",
+    "luxon": "^1.21.3",
+    "popper.js": "^1.16.0",
+    "portal-vue": "^2.1.6",
+    "sqlite3": "^4.1.1",
+    "tailwindcss": "^1.1.4",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "electron-builder": "^21.2.0"
+    "@vue/cli-plugin-babel": "^4.1.0",
+    "@vue/cli-plugin-eslint": "^4.1.0",
+    "@vue/cli-plugin-router": "^4.1.0",
+    "@vue/cli-service": "^4.1.0",
+    "@vue/eslint-config-prettier": "^5.0.0",
+    "babel-eslint": "^10.0.3",
+    "electron": "^6.0.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-vue": "^5.0.0",
+    "lint-staged": "^9.4.3",
+    "prettier": "^1.19.1",
+    "vue-cli-plugin-electron-builder": "^1.4.3",
+    "vue-template-compiler": "^2.6.10"
+  },
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,vue}": [
+      "vue-cli-service lint",
+      "git add"
+    ]
   }
 }
