chore: Dont git add in lint-staged

--- a/package.json
+++ b/package.json
@@ -50,9 +50,6 @@
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
-    "*.{js,vue}": [
-      "vue-cli-service lint",
-      "git add"
-    ]
+    "*.{js,vue}": "vue-cli-service lint"
   }
 }
