fix: frappe.registerModels
- Directly register from models object, not models.models
- frappe.getModels
- Validate model before registering
- Fix model.extend bug for duplicate fields
- Remove usage of deepmerge and use lodash/cloneDeep

--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "csvjson-csv2json": "5.0.6",
-    "deepmerge": "^2.1.0",
     "electron": "5.0.0",
     "electron-builder": "^21.0.15",
     "electron-debug": "^2.0.0",
@@ -34,6 +33,7 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "knex": "^0.20.3",
+    "lodash": "^4.17.15",
     "luxon": "^1.0.0",
     "mkdirp": "^0.5.1",
     "morgan": "^1.9.0",
