--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.4.3",
-    "deepmerge": "^4.2.2",
     "frappe-charts": "^1.3.0",
     "frappejs": "http://github.com/frappe/frappejs",
     "knex": "^0.20.4",
+    "lodash": "^4.17.15",
     "luxon": "^1.21.3",
     "popper.js": "^1.16.0",
     "portal-vue": "^2.1.6",
