--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@vue/eslint-config-prettier": "^5.0.0",
     "babel-eslint": "^10.0.3",
     "electron": "^6.0.0",
+    "electron-notarize": "^0.2.1",
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
