--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-eslint": "^10.0.3",
     "electron": "^6.0.0",
     "electron-notarize": "^0.2.1",
+    "electron-updater": "^4.2.0",
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
