--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.4.3",
+    "electron-store": "^5.1.0",
     "frappe-charts": "^1.3.0",
     "frappejs": "http://github.com/frappe/frappejs",
     "knex": "^0.20.4",
