--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^9.4.3",
     "prettier": "^1.19.1",
+    "raw-loader": "^4.0.0",
     "vue-cli-plugin-electron-builder": "^1.4.3",
     "vue-template-compiler": "^2.6.10"
   },
