--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "core-js": "^3.4.3",
     "electron-store": "^5.1.0",
     "frappe-charts": "^1.3.0",
-    "frappejs": "http://github.com/frappe/frappejs",
+    "frappejs": "https://github.com/frappe/frappejs",
     "knex": "^0.20.4",
     "lodash": "^4.17.15",
     "luxon": "^1.21.3",
