--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@popperjs/core": "^2.0.3",
     "core-js": "^3.4.3",
     "electron-store": "^5.1.0",
     "frappe-charts": "^1.3.0",
@@ -24,7 +25,6 @@
     "knex": "^0.20.4",
     "lodash": "^4.17.15",
     "luxon": "^1.21.3",
-    "popper.js": "^1.16.0",
     "portal-vue": "^2.1.6",
     "sqlite3": "^4.1.1",
     "tailwindcss": "^1.1.4",
