--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@popperjs/core": "^2.0.3",
     "core-js": "^3.4.3",
     "electron-store": "^5.1.0",
+    "font-manager": "https://github.com/q-lukasz/font-manager#issue-45--compile-error-mac-os-x--node-13-7",
     "frappe-charts": "^1.3.0",
     "frappejs": "https://github.com/frappe/frappejs",
     "knex": "^0.20.4",
