--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "lint-staged": "^9.4.3",
     "prettier": "^1.19.1",
     "raw-loader": "^4.0.0",
-    "vue-cli-plugin-electron-builder": "^1.4.3",
+    "vue-cli-plugin-electron-builder": "https://github.com/netchampfaris/vue-cli-plugin-electron-builder",
     "vue-template-compiler": "^2.6.10"
   },
   "gitHooks": {
