--- a/package.json
+++ b/package.json
@@ -8,53 +8,44 @@
   },
   "scripts": {
     "test": "NODE_ENV=test mocha --timeout 3000 tests --exit",
-    "test-watch": "NODE_ENV=test mocha --timeout 3000 tests --watch --reporter=min",
-    "start": "nodemon app.js"
+    "test-watch": "NODE_ENV=test mocha --timeout 3000 tests --watch --reporter=min"
   },
   "dependencies": {
-    "autoprefixer": "9.6.1",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "body-parser": "^1.18.2",
-    "case-sensitive-paths-webpack-plugin": "^2.1.2",
-    "commander": "^2.13.0",
-    "copy-webpack-plugin": "^4.5.4",
-    "cors": "^2.8.4",
-    "cross-env": "^5.2.0",
-    "css-loader": "^1.0.0",
-    "csvjson-csv2json": "5.0.6",
-    "electron": "5.0.0",
-    "electron-builder": "^21.0.15",
-    "electron-debug": "^2.0.0",
-    "electron-devtools-installer": "^2.2.4",
-    "express": "^4.16.2",
-    "feather-icons": "^4.7.3",
-    "file-loader": "^1.1.11",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^3.2.0",
-    "knex": "^0.95.11",
-    "lodash": "^4.17.15",
-    "luxon": "^1.0.0",
-    "mkdirp": "^0.5.1",
-    "morgan": "^1.9.0",
-    "multer": "^1.3.1",
-    "node-fetch": "^1.7.3",
-    "nunjucks": "^3.1.0",
-    "popper.js": "^1.14.3",
-    "postcss-loader": "3.0.0",
-    "sass-loader": "^7.0.3",
-    "showdown": "^1.8.6",
-    "socket.io": "^2.0.4",
-    "sqlite3": "^5.0",
-    "tailwindcss": "1.1.1",
+    "@babel/core": "^7.16.0",
+    "autoprefixer": "^10.4.0",
+    "babel-loader": "^8.2.3",
+    "body-parser": "^1.19.0",
+    "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "commander": "^8.3.0",
+    "copy-webpack-plugin": "^9.0.1",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.5.0",
+    "electron": "^15.3.0",
+    "express": "^4.17.1",
+    "feather-icons": "^4.28.0",
+    "html-webpack-plugin": "^5.5.0",
+    "knex": "^0.95.12",
+    "lodash": "^4.17.21",
+    "luxon": "^2.0.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.3",
+    "node-fetch": "^3.0.0",
+    "nunjucks": "^3.2.3",
+    "postcss": "^8.3.11",
+    "postcss-loader": "^6.2.0",
+    "sass-loader": "^12.3.0",
+    "socket.io": "^4.3.1",
+    "sqlite3": "^5.0.2",
+    "tailwindcss": "^2.2.19",
     "vue": "^2.6.10",
-    "vue-flatpickr-component": "^8.1.2",
-    "vue-loader": "^15.2.6",
-    "vue-router": "^3.0.7",
-    "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.16.1",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-hot-middleware": "^2.22.3"
+    "vue-flatpickr-component": "^9.0.5",
+    "vue-loader": "^15.9.8",
+    "vue-router": "^3.5.3",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^5.61.0",
+    "webpack-dev-server": "^4.4.0",
+    "webpack-hot-middleware": "^2.25.1"
   },
   "repository": {
     "type": "git",
@@ -70,8 +61,8 @@
   },
   "homepage": "https://github.com/frappe/frappejs#readme",
   "devDependencies": {
-    "mocha": "^5.2.0",
-    "nodemon": "^1.18.3"
+    "electron-download": "^4.1.1",
+    "mocha": "^5.2.0"
   },
   "engines": {
     "node": ">=16.4.0"
