--- a/package.json
+++ b/package.json
@@ -20,14 +20,13 @@
     "@popperjs/core": "^2.0.3",
     "core-js": "^3.4.3",
     "electron-store": "^5.1.0",
-    "frappejs": "https://github.com/frappe/frappejs",
     "frappe-charts": "1.6.1",
+    "frappejs": "https://github.com/frappe/frappejs",
     "knex": "^0.95.11",
     "lodash": "^4.17.15",
     "luxon": "^1.21.3",
     "portal-vue": "^2.1.6",
     "sqlite3": "^4.1.1",
-    "tailwindcss": "^1.2.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
@@ -37,6 +36,7 @@
     "@vue/cli-plugin-router": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "@vue/eslint-config-prettier": "^5.0.0",
+    "autoprefixer": "^9",
     "babel-eslint": "^10.0.3",
     "electron": "^8.0.0",
     "electron-devtools-installer": "^3.2.0",
@@ -46,8 +46,10 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^9.4.3",
+    "postcss": "^7",
     "prettier": "^1.19.1",
     "raw-loader": "^4.0.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue-cli-plugin-electron-builder": "^2.0.0",
     "vue-template-compiler": "^2.6.10"
   },
