chore: bump linters and parsers and electron's friends - prettier and eslint have to be configured - few rules have been switched off - deps bumped in this did not require major changes

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@popperjs/core": "^2.10.2",
     "core-js": "^3.19.0",
+    "csvjson-csv2json": "^5.0.6",
     "electron-store": "^5.1.0",
     "frappe-charts": "1.6.1",
     "frappejs": "https://github.com/frappe/frappejs",
@@ -31,27 +32,29 @@
     "vue-router": "^3.5.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-plugin-router": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
-    "@vue/eslint-config-prettier": "^5.0.0",
+    "@babel/core": "^7.16.0",
+    "@babel/eslint-parser": "^7.16.0",
+    "@vue/cli-plugin-babel": "^4.5.0",
+    "@vue/cli-plugin-eslint": "^5.0.0-beta.7",
+    "@vue/cli-plugin-router": "^4.5.0",
+    "@vue/cli-service": "^4.5.0",
     "autoprefixer": "^9",
-    "babel-eslint": "^10.0.3",
     "electron": "^8.0.0",
     "electron-devtools-installer": "^3.2.0",
-    "electron-notarize": "^0.2.1",
-    "electron-updater": "^4.2.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^5.0.0",
-    "lint-staged": "^9.4.3",
+    "electron-notarize": "^1.1.1",
+    "electron-updater": "^4.3.9",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "lint-staged": "^11.2.6",
     "postcss": "^7",
-    "prettier": "^1.19.1",
-    "raw-loader": "^4.0.0",
+    "prettier": "^2.4.1",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue-cli-plugin-electron-builder": "^2.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^5.61.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
