--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "*.{js,vue}": "vue-cli-service lint"
   },
   "engines": {
-    "node": ">=16.4.0"
+    "node": ">=16.4.0",
+    "yarn": "1.22.17"
   },
   "prettier": {
     "semi": true,
