chore: shift browserlist to package.json

--- a/package.json
+++ b/package.json
@@ -73,5 +73,8 @@
     "semi": true,
     "singleQuote": true,
     "trailingComma": "es5"
-  }
+  },
+  "browserslist": [
+    "Electron > 15"
+  ]
 }
