build(win): fix webkit-app-region issue - set multiple icon sizes - set icon if linux

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -29,12 +29,11 @@ nsis:
   publish:
     - github
 linux:
-  icon: build/icon.icns
+  icon: build/icons
   category: Finance
   publish:
     - github
   target:
-    - snap
     - deb
     - AppImage
     - rpm
