--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,12 +12,12 @@ on:
 
 jobs:
   setup_and_build:
-    runs-on: macos-latest
+    runs-on: macos-11
     steps:
       - name: Setup node
         uses: actions/setup-node@v2
         with:
-          node-version: '16.4.0'
+          node-version: '16.13.1'
 
       - name: Set yarn version
         run: yarn set version 1.22.17
