--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,12 +4,12 @@ on: workflow_dispatch
 
 jobs:
   build-macos:
-    runs-on: macos-latest
+    runs-on: macos-11
     steps:
       - name: Setup node
         uses: actions/setup-node@v2
         with:
-          node-version: '16.4.0'
+          node-version: '16.13.1'
 
       - name: Change yarn version
         run: yarn set version 1.22.17
@@ -57,10 +57,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v2
         with:
-          node-version: '16.4.0'
-
-      - name: Change yarn version
-        run: yarn set version 1.22.17
+          node-version: '16.13.1'
 
       - name: Checkout Books
         uses: actions/checkout@v2
@@ -93,7 +90,7 @@ jobs:
           yarn electron:build --linux --publish always
 
   build-windows:
-    runs-on: windows-latest
+    runs-on: windows-2022
     defaults:
       run:
         shell: bash
@@ -102,10 +99,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v2
         with:
-          node-version: '16.4.0'
-
-      - name: Change yarn version
-        run: yarn set version 1.22.17
+          node-version: '16.13.1'
 
       - name: Checkout Books
         uses: actions/checkout@v2
