chore: switch sqlite3 to vscode fork

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "postcss-loader": "^6.2.0",
     "sass-loader": "^12.3.0",
     "socket.io": "^4.3.1",
-    "sqlite3": "^5.0.2",
+    "sqlite3": "npm:@vscode/sqlite3@^5.0.7",
     "tailwindcss": "^2.2.19",
     "vue": "^2.6.10",
     "vue-flatpickr-component": "^9.0.5",
