ci(build): add upgrade frappejs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Setup Books
         run: |
           cd $GITHUB_WORKSPACE/main
-          yarn
+          yarn upgrade frappejs
           yarn link frappejs
 
       - name: Install RPM
