ci(publish): change to upgrade frappejs

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Setup Books
         run: |
           cd $GITHUB_WORKSPACE/main
-          yarn
+          yarn upgrade frappejs
           yarn link frappejs
 
       - name: Run build
@@ -79,7 +79,7 @@ jobs:
       - name: Setup Books
         run: |
           cd $GITHUB_WORKSPACE/main
-          yarn
+          yarn upgrade frappejs
           yarn link frappejs
 
       - name: Run build
@@ -121,7 +121,7 @@ jobs:
       - name: Setup Books
         run: |
           cd $GITHUB_WORKSPACE/main
-          yarn
+          yarn upgrade frappejs
           yarn link frappejs
 
       - name: Run build
