--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
   "name": "frappe-books",
-  "description": "Simple book-keeping app for everyone",
-  "homepage": "https://frappebooks.com",
   "version": "0.0.4-beta.2",
+  "description": "Simple book-keeping app for everyone",
   "author": {
     "name": "Frappe Technologies Pvt. Ltd.",
     "email": "hello@frappe.io"
-  },
-  "repository": {
-    "url": "https://github.com/frappe/books"
   },
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -38,10 +34,14 @@
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/eslint-parser": "^7.16.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
     "@vue/cli-plugin-babel": "^4.5.0",
     "@vue/cli-plugin-eslint": "^5.0.0-beta.7",
     "@vue/cli-plugin-router": "^4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-service": "^4.5.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "autoprefixer": "^9",
     "babel-loader": "^8.2.3",
     "electron": "^15.3.0",
@@ -51,29 +51,34 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "^7.0.0",
     "lint-staged": "^11.2.6",
     "postcss": "^8",
     "prettier": "^2.4.1",
     "raw-loader": "^4.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "typescript": "~4.1.5",
     "vue-cli-plugin-electron-builder": "^2.0.0",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^5.66.0"
-  },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,vue}": "vue-cli-service lint"
-  },
-  "engines": {
-    "node": ">=16.13.1",
-    "yarn": "1.22.17"
   },
   "prettier": {
     "semi": true,
     "singleQuote": true,
     "trailingComma": "es5"
+  },
+  "engines": {
+    "node": ">=16.13.1",
+    "yarn": "1.22.17"
+  },
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "homepage": "https://frappebooks.com",
+  "lint-staged": {
+    "*.{js,vue}": "vue-cli-service lint"
+  },
+  "repository": {
+    "url": "https://github.com/frappe/books"
   }
 }
