--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,8 +30,16 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
+
     "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "tests/**/*.tsx",
+
+    "frappe/**/*.ts",
+    "models/**/*.ts",
+    "patches/**/*.ts",
+    "reports/**/*.ts",
+    "accounting/**/*.ts",
+    "accounting/**/*.ts",
   ],
   "exclude": [
     "node_modules"
