feat: add script to generate translation file

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "postuninstall": "electron-builder install-app-deps",
+    "script:translate": "node scripts/generateTranslations.js"
   },
   "main": "background.js",
   "dependencies": {
