--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "knex": "^0.95.12",
     "lodash": "^4.17.21",
     "luxon": "^2.0.2",
+    "node-fetch": "2",
     "pesa": "^1.1.3",
     "sqlite3": "npm:@vscode/sqlite3@^5.0.7",
     "vue": "^3.2.30",
